<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scroll">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/relative_artists"
   tools:context="com.example.android.musicalStructure.ListArtists">
    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_artist"
        android:weightSum="3">
    <ImageView
        android:id="@+id/back"
        style="@style/back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nameArtist"
            android:layout_weight="1"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textAlignment="center"
            android:layout_weight="2"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_first"
        android:layout_below="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_artist_a"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_list"
            android:layout_weight="0.5"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artFirst"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_second"
        android:layout_below="@+id/list_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_artist_b"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/second_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artSecond"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_third"
        android:layout_below="@+id/list_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_artist_a"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/third_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artThird"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_forth"
        android:layout_below="@+id/list_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_artist_b"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forth_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artFour"
            android:layout_weight="2"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_five"
        android:layout_below="@+id/list_forth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_artist_a"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artFive"
            android:layout_weight="2"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_six"
        android:layout_below="@+id/list_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_artist_b"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artSix"
            android:layout_weight="2"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_artist"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/artist"
        android:layout_below="@+id/list_six"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_artist"
        android:text="@string/purpose_artist"
        android:padding="4dp"
        android:layout_margin="4dp" />

</RelativeLayout>
</ScrollView>