<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scroll">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/relative_albums"
    tools:context="com.example.android.musicalStructure.ListAlbums">
<LinearLayout
    android:id="@+id/nav"
    style="@style/linear_album_one">
    <ImageView
        android:id="@+id/back"
        style="@style/back"/>
    <TextView
        style="@style/album_nav"/>
    <TextView
        style="@style/linear_nav_date_album"/>
</LinearLayout>


    <LinearLayout
        android:id="@+id/list_first"
        android:layout_below="@+id/nav"
        style="@style/album_linear_first">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_list"
            android:layout_weight="0.5"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dateFirst"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_second"
        android:layout_below="@+id/list_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_album_a"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/second_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dateSecond"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_third"
        android:layout_below="@+id/list_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_album_b"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/third_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dateThird"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_forth"
        android:layout_below="@+id/list_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_album_a"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forth_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dateFour"
            android:layout_weight="2"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_five"
        android:layout_below="@+id/list_forth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_album_b"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dateFive"
            android:layout_weight="2"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_six"
        android:layout_below="@+id/list_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_album_a"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six_list"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:layout_weight="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dateSix"
            android:layout_weight="2"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="4dp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/image_album"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/album"
        android:layout_below="@+id/list_six"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_album"
        android:text="@string/purpose_album"
        android:padding="4dp"
        android:layout_margin="4dp" />
</RelativeLayout>
    </ScrollView>
